--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
 
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
+
+
+/* Global styles */
+body {
+	@apply bg-stone-900;
+}
+
+
+/* Custom tailwind classes */
+@layer utilities {
+	.button {
+		@apply uppercase filter hover:brightness-110 active:brightness-90 disabled:brightness-50;
+	}
+
+	.shadow-none {
+		box-shadow: none;
+	}
+}
+
+
+/* Scrollbars */
+::-webkit-scrollbar {
+    width: 7px;
+
+    @apply bg-transparent;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    border: 2px solid;
+
+    @apply bg-orange-500 border-stone-700;
+}
+::-webkit-scrollbar-thumb:active {
+	@apply bg-orange-600;
+}
+::-webkit-scrollbar-track {
+    border-radius: 3px;
+    background-color: transparent;
+}
